# label-load

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  SECURITY.md  THIRD_PARTY_NOTICES.md  analysis_options.yaml  pubspec.yaml  run.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
integration_test/flows/: ai_inference_flow_test.dart  app_smoke_test.dart  batch_inference_flow_test.dart  gadgets_flow_test.dart  home_flow_test.dart  keybindings_custom_flow_test.dart  keybindings_reset_flow_test.dart  label_import_export_flow_test.dart  language_switch_flow_test.dart  project_creation_flow_test.dart  project_delete_flow_test.dart  project_edit_flow_test.dart  settings_and_toolbar_flow_test.dart
integration_test/helpers/: integration_test_harness.dart
lib/: main.dart
lib/app/: theme.dart
lib/l10n/: app_en.arb  app_zh.arb
lib/models/: ai_config.dart  config.dart  label.dart  label_definition.dart  project.dart  project_config.dart
lib/pages/: home_page.dart  project_list_page.dart  project_settings_page.dart
lib/providers/: app_error_state.dart  canvas_provider.dart  keybindings_provider.dart  project_list_provider.dart  project_provider.dart  settings_provider.dart  theme_provider.dart
lib/utils/: toast_utils.dart
linux/: CMakeLists.txt
linux/runner/: main.cc  my_application.cc
onnx_inference/: .metadata  README.md  ffigen.yaml  pubspec.yaml
onnx_inference/lib/: onnx_inference.dart
onnx_inference/linux/: CMakeLists.txt
onnx_inference/src/: CMakeLists.txt  onnx_inference.cpp  onnx_inference.h  onnx_inference_utils.cpp  onnx_inference_utils.h
onnx_inference/test/: onnx_inference_test.dart
onnx_inference/tests/: onnx_inference_stub_test.cpp  onnx_inference_utils_test.cpp
packaging/: Dockerfile.build  build_deb.sh  build_docker.sh
test/: main_test.dart
test/app/: theme_test.dart
test/helpers/: canvas_test_harness.dart
test/l10n/: arb_consistency_test.dart
test/models/: ai_config_test.dart  config_test.dart  label_definition_test.dart  label_test.dart  project_config_test.dart  project_test.dart
test/pages/: home_page_test.dart  project_list_page_test.dart  project_settings_page_test.dart  test_helpers.dart
test/providers/: app_error_state_test.dart  canvas_interaction_policy_summary_test.dart  canvas_interaction_policy_test.dart  canvas_provider_test.dart  keybindings_provider_test.dart  project_list_provider_test.dart  project_provider_label_factory_test.dart  project_provider_test.dart  (+3 more)
(+151 files in other folders)
